task2/nginxservice.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2023-03-29T17:02:00Z"
  labels:
    app: nginx
  name: nginx
  namespace: default
  resourceVersion: "1770"
  uid: 036a7714-6df7-47e3-a63a-2501b251d336
spec:
  clusterIP: 10.100.202.245
  clusterIPs:
  - 10.100.202.245
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 80-80
    nodePort: 30124
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
